docs: proxy /openapi.json via redirects only; remove prebuild & static schema; clean build

--- a/static/insomnia/portpulse_insomnia.yaml
+++ b/static/insomnia/portpulse_insomnia.yaml
@@ -18,7 +18,7 @@ resources:
     parentId: wrk_portpulse
     name: USLAX Trend (14d)
     method: GET
-    url: "{{ _.baseUrl }}/v1/ports/USLAX/trend?window=14d"
+    url: "{{ _.baseUrl }}/v1/ports/USLAX/trend?window=14"
     headers:
       - name: X-API-Key
         value: "{{ _.X-API-Key }}"
